--- a/index.html
+++ b/index.html
@@ -1,6 +1,84 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Cairo:wght@200..1000&family=Nata+Sans:wght@100..900&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
+  <title>Document</title>
+</head>
+<body dir="rtl">
+  <div class="box" >
+    <h4>
+      اكتشفي مساعدك السحري فالكوزينة ✨
+    </h4>
+    <p>
+      قطّاعة الخضر متعددة الاستعمالات، كتجمع بين الأناقة والعملية، وكتوفر ليك 7 شفرات مختلفة باش تحضري أي وجبة بطريقة سهلة وسريعة.
+    </p>
+    <br>
+    <h4 class="hed">
+      المشكل اللي كتعاني منو كل نهار 😩  
+    </h4>
+    <p class="p1">
+      التحضير ديال الماكلة كياخد وقت طويل وكيخلّي الكوزينة عامرة بالفوضى.
+التقطيع بالسكين متعب، غير متساوي، وفيه خطورة على الأصابع، خصوصاً إلا كان التحضير يومي وكثير.
+    </p>
+    <!--
+    <div class="flex">
+      <div class="c-img">
+        <div class="icon">
+          X
+        </div>
+        <img src="20250911_194757.png" alt="" />
+      </div>
+            <div class="c-img">
+        <div class="icon">
+          X
+        </div>
+        <img src="20250911_194757.png" alt="" />
+      </div>
+    </div>
+    -->
+    <img class="img1" width="100%" src="https://cdn.youcan.shop/stores/eae7c6c775d6922b604e0337b9e4b1de/others/uxlEnziFLDvqc5XnWYbFyCNzPtXz1pJodbIhZucv.png" alt="" />
+    <h4 class="hed1">
+      الحل بين يديك 🙌
+    </h4>
+    <p class="p2">
+      القطّاعة العجيبة كتوفّر ليك كلشي فآلة وحدة:
+<br />
+✂ 7 شفرات مختلفة للتقطيع (مكعبات، شرائح، أعواد، وحتى بشر). 
+<br />
+
+🥗 علبة مرفقة كتحافظ على النظام فالكوزينة.
+<br />
+⏳ كتربح الوقت: حضري الطياب أو السلطة فدقائق قليلة.
+<br />
+🧼 سهلة التنظيف: تقدري تغسليها يدويًا أو فغسالة الأواني.
+<br />
+🛡 آمنة: مزودة بغطاء وحامي للأصابع باش تستعمليها بلا خوف
+    </p>
+    <img class="img2" width="100%" src="https://cdn.youcan.shop/stores/eae7c6c775d6922b604e0337b9e4b1de/others/LDfT2JogHFuvEIh1D2DwbTnanJJTuK4YcDHRRiKl.png" alt="" />
+    <br />
+    <div class="foter">
+      
+      <p>
+        ✨ باختصار، هاد القطّاعة متعددة الاستعمالات غادي تغيّر ليك حياتك فالكوزينة. كتجمع بين السرعة، الأمان، والنظافة، وكتخلي التحضير ديال الماكلة متعة ماشي عذاب. مثالية لكل واحد باغي يربح الوقت ويستمتع بوجبات صحية ومنظمة بلا صداع.
+      </p>
+      <img width="150px" src="https://cdn.youcan.shop/stores/eae7c6c775d6922b604e0337b9e4b1de/others/3LLiorBSl5iBQO0TLSNb5BoWZcZ1LNYd8MI1jmib.gif" alt="" />
+    </div>
+    <img width="100%" src="https://cdn.youcan.shop/stores/eae7c6c775d6922b604e0337b9e4b1de/others/qt48yzP4k48Dmha5Y22hZHenHM5rfdNwK07w4ZhU.png" alt="" />
+   
+    
+  </div>
+</body>
+</html>
+
+<!-- <!DOCTYPE html>
+<html lang="en">
+<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
@@ -37,3 +115,4 @@
     </div>
 </body>
 </html>
+ -->
