--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       </p>
      
     </div>
-    <img width="100%" src="https://cdn.youcan.shop/stores/eae7c6c775d6922b604e0337b9e4b1de/others/qt48yzP4k48Dmha5Y22hZHenHM5rfdNwK07w4ZhU.png" alt="" />
+    <img width="100%" src="https://drive.google.com/file/d/1eqw1quFSY6tIS3UPRuYj2uUFG8uZFTd1/view" alt="" />
    
     
   </div>
