--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       </p>
      
     </div>
-    <img width="100%" src="https://drive.google.com/file/d/1eqw1quFSY6tIS3UPRuYj2uUFG8uZFTd1/view" alt="" />
+    <img width="100%" src="Guarantee.png" alt="" />
    
     
   </div>
