--- a/index.html
+++ b/index.html
@@ -62,12 +62,15 @@
     </p>
     <img class="img2" width="100%" src="https://cdn.youcan.shop/stores/eae7c6c775d6922b604e0337b9e4b1de/others/LDfT2JogHFuvEIh1D2DwbTnanJJTuK4YcDHRRiKl.png" alt="" />
     <br />
-    <div class="foter">
-       <img width="150px" src="https://cdn.youcan.shop/stores/eae7c6c775d6922b604e0337b9e4b1de/others/3LLiorBSl5iBQO0TLSNb5BoWZcZ1LNYd8MI1jmib.gif" alt="" />
-      <p>
-        ✨ باختصار، هاد القطّاعة متعددة الاستعمالات غادي تغيّر ليك حياتك فالكوزينة. كتجمع بين السرعة، الأمان، والنظافة، وكتخلي التحضير ديال الماكلة متعة ماشي عذاب. مثالية لكل واحد باغي يربح الوقت ويستمتع بوجبات صحية ومنظمة بلا صداع.
-      </p>
-     
+   <div class="foter">
+      <div class="c-foter">
+        <img width="150px" src="https://cdn.youcan.shop/stores/eae7c6c775d6922b604e0337b9e4b1de/others/3LLiorBSl5iBQO0TLSNb5BoWZcZ1LNYd8MI1jmib.gif" alt="" />
+      </div>
+      <div class="c-para">
+        <p>
+         ✨ باختصار، هاد القطّاعة متعددة الاستعمالات غادي تغيّر ليك حياتك فالكوزينة بشكل كامل. ماشي غير وسيلة لتقطيع الخضر والفواكه بسرعة، ولكن كتجمع بين السرعة، الأمان، والنظافة باش كل وجبة تولي تجربة ممتعة بلا صداع. كتسهّل عليك التحضير اليومي، كتوفّر الوقت، وكتخلي الكوزينة منظمة وأنيقة. مثالية لكل واحد باغي يستمتع بوجبات صحية، متوازنة، وسريعة، سواء كنت كتحضر العشاء للعائلة أو وجبات سريعة لنفسك. 
+          </p>
+      </div>
     </div>
     <img width="100%" src="Guarantee.png" alt="" />
    
