--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       </div>
     </div>
     -->
-    <img class="img1" width="100%" src="https://cdn.youcan.shop/stores/eae7c6c775d6922b604e0337b9e4b1de/others/LemkAKQqSanTsOKOyxLAVmwO9XxexCA1J1tCN9Xm.png" alt="" />
+    <img class="img1" loading="lazy" width="100%" src="https://cdn.youcan.shop/stores/eae7c6c775d6922b604e0337b9e4b1de/others/LemkAKQqSanTsOKOyxLAVmwO9XxexCA1J1tCN9Xm.png" alt="" />
     <h4 class="hed1">
       الحل بين يديك 🙌
     </h4>
@@ -60,19 +60,20 @@
 <br />
 🛡 آمنة: مزودة بغطاء وحامي للأصابع باش تستعمليها بلا خوف
     </p>
-    <img class="img2" width="100%" src="https://cdn.youcan.shop/stores/eae7c6c775d6922b604e0337b9e4b1de/others/LDfT2JogHFuvEIh1D2DwbTnanJJTuK4YcDHRRiKl.png" alt="" />
+    <img class="img2" loading="lazy" width="100%" src="https://cdn.youcan.shop/stores/eae7c6c775d6922b604e0337b9e4b1de/others/LDfT2JogHFuvEIh1D2DwbTnanJJTuK4YcDHRRiKl.png" alt="" />
     <br />
    <div class="foter">
       <div class="c-foter">
-        <img width="150px" src="https://cdn.youcan.shop/stores/eae7c6c775d6922b604e0337b9e4b1de/others/3LLiorBSl5iBQO0TLSNb5BoWZcZ1LNYd8MI1jmib.gif" alt="" />
+        <img width="150px" loading="lazy" src="https://cdn.youcan.shop/stores/eae7c6c775d6922b604e0337b9e4b1de/others/3LLiorBSl5iBQO0TLSNb5BoWZcZ1LNYd8MI1jmib.gif" alt="" />
       </div>
+     
       <div class="c-para">
         <p>
          ✨ باختصار، هاد القطّاعة متعددة الاستعمالات غادي تغيّر ليك حياتك فالكوزينة بشكل كامل. ماشي غير وسيلة لتقطيع الخضر والفواكه بسرعة، ولكن كتجمع بين السرعة، الأمان، والنظافة باش كل وجبة تولي تجربة ممتعة بلا صداع. كتسهّل عليك التحضير اليومي، كتوفّر الوقت، وكتخلي الكوزينة منظمة وأنيقة. مثالية لكل واحد باغي يستمتع بوجبات صحية، متوازنة، وسريعة، سواء كنت كتحضر العشاء للعائلة أو وجبات سريعة لنفسك. 
           </p>
       </div>
     </div>
-    <img width="100%" src="Guarantee.png" alt="" />
+    <img width="100%" src="Guarantee.png" loading="lazy" alt="" />
    
     
   </div>
